# fretboardgtr

./: .bumpversion.cfg  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  .pypirc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  cliff.toml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yaml
docs/scripts/: default.mplstyle  plot.py
docs/source/: conf.py  index.md
docs/source/_static/css/: custom.css
docs/source/api_documentation/: constants.md  converters.md  elements.md  exporters.md  fretboard.md  fretboards.md  index.md  note_colors.md  notes_creators.md  utils.md
docs/source/get-started/: configuration.md  get-started.md  index.md
fretboardgtr/: __init__.py  _version.py  base.py  chordgtr.py  constants.py  exporters.py  fretboard.py  fretboardgtr.py  note_colors.py  notes.py  notes_creators.py  scale_creators.py  scalegtr.py  utils.py
fretboardgtr/elements/: background.py  base.py  cross.py  fret_number.py  frets.py  neck_dots.py  notes.py  nut.py  strings.py  tuning.py
fretboardgtr/fretboards/: base.py  config.py  converters.py  elements.py  fretboard.py  horizontal.py  svg_drawer.py  vertical.py
tests/: test_chordgtr.py  test_e2e.py  test_exporters.py  test_fretboard.py  test_fretboard_vertical.py  test_fretboardgtr.py  test_integrate.py  test_notes.py  test_notes_creator.py  test_scalegtr.py  test_utils.py
tests/elements/: test_background.py  test_fret_number.py  test_frets.py  test_neck_dots.py  test_notes.py  test_nut.py  test_strings.py  test_tuning.py
